# flight-sql-client-node

./: .eslintrc.yml  Cargo.toml  README.md  index.d.ts  index.js  index.ts  native.d.ts  package.json  simple-test.js
.github/workflows/: CI.yml  lint.yml
__test__/: index.spec.ts  query.sp_ec.ts  query.spec.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  p_ackage.json  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: conversion.rs  error.rs  flight_client.rs  lib.rs
ts/: client.ts
