[package]
authors = ["Robert Pack <robstar.pack@gmail.com>"]
edition = "2021"
name    = "flight-sql-client-node"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow-array = "49"
arrow-cast = "49"
arrow-flight = { version = "49", features = ["flight-sql-experimental"] }
arrow-ipc = "49"
arrow-schema = "49"
futures = "0.3"
napi = { version = "2.12.2", default-features = false, features = [
  "napi8",
  "tokio_rt",
  "async",
] }
napi-derive = "2"
snafu = "0.7"
tokio = "1"
tonic = { version = "0.10", features = ["tls"] }
tracing-log = "0.2"
tracing-subscriber = "0.3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
